k8s/staging/others/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: staging
  name: capital-cove
spec:
  selector:
    app: capital-cove-be
  ports:
    - port: 80
      targetPort: 4000
